2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_CPU.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, mongoosev/duart/mg5uart.c, mongoosev/duart/mg5uart.h,
	mongoosev/duart/mg5uart_reg.c, mongoosev/include/mongoose-v.h,
	mongoosev/vectorisrs/maxvectors.c, mongoosev/vectorisrs/vectorisrs.c,
	r46xx/vectorisrs/maxvectors.c, shared/interrupts/isr_entries.S,
	timer/timer.c, tx39/vectorisrs/maxvectors.c: URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* mongoosev/Makefile.am: Reflect having moved automake/.
	* mongoosev/duart/Makefile.am: Reflect having moved automake/.
	* mongoosev/vectorisrs/Makefile.am: Reflect having moved automake/.
	* r46xx/Makefile.am: Reflect having moved automake/.
	* r46xx/vectorisrs/Makefile.am: Reflect having moved automake/.
	* shared/Makefile.am: Reflect having moved automake/.
	* shared/cache/Makefile.am: Reflect having moved automake/.
	* shared/interrupts/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.
	* tx39/Makefile.am: Reflect having moved automake/.
	* tx39/include/Makefile.am: Reflect having moved automake/.
	* tx39/vectorisrs/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).
