@@ -2,7 +2,6 @@
 ## $Id$
 ##
 
-
 PGM = $(ARCH)/mg5uart.rel
 
 C_FILES = mg5uart.c mg5uart_reg.c
@@ -12,11 +11,6 @@ mg5uart_rel_OBJECTS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 include $(top_srcdir)/../../../automake/compile.am
 include $(top_srcdir)/../../../automake/lib.am
 
-$(PROJECT_INCLUDE)/libchip:
-	@$(mkinstalldirs) $@
-$(PROJECT_INCLUDE)/libchip/%.h: %.h
-	$(INSTALL_DATA) $< $@
-
 #
 # (OPTIONAL) Add local stuff here using +=
 #
@@ -24,16 +18,23 @@ $(PROJECT_INCLUDE)/libchip/%.h: %.h
 $(PGM): $(mg5uart_rel_OBJECTS)
 	$(make-rel)
 
-## include_libchip_HEADERS = mg5uart.h
+include_libchipdir = $(includedir)/libchip
+include_libchip_HEADERS = mg5uart.h
 
-PREINSTALL_FILES = $(PROJECT_INCLUDE)/libchip \
-       $(PROJECT_INCLUDE)/libchip/mg5uart.h
-
-##    $(include_libchip_HEADERS:%=$(PROJECT_INCLUDE)/libchip/%)
 all-local: $(ARCH) $(PREINSTALL_FILES) $(mg5uart_rel_OBJECTS) $(PGM)
 
 .PRECIOUS: $(PGM)
 
-EXTRA_DIST = mg5uart.c README.mguart mg5uart.c mg5uart.h mg5uart_reg.c
+EXTRA_DIST = mg5uart.c README.mguart mg5uart.c mg5uart_reg.c
+
+PREINSTALL_FILES =
+
+$(PROJECT_INCLUDE)/libchip:
+	@$(mkinstalldirs) $(PROJECT_INCLUDE)/libchip
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/libchip
+
+$(PROJECT_INCLUDE)/libchip/mg5uart.h: mg5uart.h
+	$(INSTALL_DATA) $< $@
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/libchip/mg5uart.h
 
 include $(top_srcdir)/../../../automake/local.am
